--- a/026_splitting.ipynb
+++ b/026_splitting.ipynb
@@ -2,16 +2,172 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>file</th>\n",
+       "      <th>segment_file</th>\n",
+       "      <th>start</th>\n",
+       "      <th>end</th>\n",
+       "      <th>asr_transcription</th>\n",
+       "      <th>kaldi_transcript</th>\n",
+       "      <th>raw_transcript__matched_on_kaldi</th>\n",
+       "      <th>raw_transcript__matched_on_asr</th>\n",
+       "      <th>guest_name</th>\n",
+       "      <th>guest_description</th>\n",
+       "      <th>host</th>\n",
+       "      <th>kaldi_words</th>\n",
+       "      <th>kaldi_word_starts</th>\n",
+       "      <th>kaldi_word_ends</th>\n",
+       "      <th>speaker_breakdown</th>\n",
+       "      <th>average_distance</th>\n",
+       "      <th>similarity_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>audio/58xZSVbpgkk.wav</td>\n",
+       "      <td>seg_audio/58xZSVbpgkk__12.0__31.0__.wav</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>nekoliko puta smo ponavljali da nišo od uvođen...</td>\n",
+       "      <td>nekoliko tema je bilo u skupštini znači niške ...</td>\n",
+       "      <td>nekoliko tema je bilo u Skupštini! Znači, nišk...</td>\n",
+       "      <td>Nekoliko puta smo ponavljali da Niš od uvođenj...</td>\n",
+       "      <td>Slavoljub Vlajković</td>\n",
+       "      <td>narodni poslanik SPS iz Niša</td>\n",
+       "      <td>Predrag Blagojević</td>\n",
+       "      <td>[nekoliko, tema, je, bilo, u, skupštini, znači...</td>\n",
+       "      <td>[12.47, 13.3, 13.45, 13.51, 13.65, 14.66, 15.0...</td>\n",
+       "      <td>[12.89, 13.45, 13.51, 13.65, 13.68, 15.0, 15.5...</td>\n",
+       "      <td>[[guest, 12.47, 16.79], [host, 16.79, 19.03], ...</td>\n",
+       "      <td>5.142857</td>\n",
+       "      <td>44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>audio/58xZSVbpgkk.wav</td>\n",
+       "      <td>seg_audio/58xZSVbpgkk__31.0__47.0__.wav</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>nikad više pa niti iskoristio niti će izgledat...</td>\n",
+       "      <td>nikad više&lt;anchor_end&gt; niti je iskoristio niti...</td>\n",
+       "      <td>nikad više?’ Niti je iskoristio, niti će izgle...</td>\n",
+       "      <td>nikad više?’ Niti je iskoristio, niti će izgle...</td>\n",
+       "      <td>Slavoljub Vlajković</td>\n",
+       "      <td>narodni poslanik SPS iz Niša</td>\n",
+       "      <td>Predrag Blagojević</td>\n",
+       "      <td>[nikad, više&lt;anchor_end&gt;, niti, je, iskoristio...</td>\n",
+       "      <td>[31.17, 31.46, 32.62, 32.83, 32.89, 33.54, 33....</td>\n",
+       "      <td>[31.46, 31.74, 32.83, 32.89, 33.54, 33.75, 33....</td>\n",
+       "      <td>[[host, 31.17, 31.74], [guest, 31.74, 36.67], ...</td>\n",
+       "      <td>3.604167</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>audio/58xZSVbpgkk.wav</td>\n",
+       "      <td>seg_audio/58xZSVbpgkk__47.0__62.5__.wav</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>dobrani i znate da e svaka stranka od polih pr...</td>\n",
+       "      <td>vi znate da svaka stranka otprilike predloži d...</td>\n",
+       "      <td>znate da svaka stranka otprilike predloži 250 ...</td>\n",
+       "      <td>izabrani. Vi znate da svaka stranka otprilike ...</td>\n",
+       "      <td>Slavoljub Vlajković</td>\n",
+       "      <td>narodni poslanik SPS iz Niša</td>\n",
+       "      <td>Predrag Blagojević</td>\n",
+       "      <td>[vi, znate, da, svaka, stranka, otprilike, pre...</td>\n",
+       "      <td>[47.74, 47.84, 48.12, 48.19, 48.49, 48.89, 49....</td>\n",
+       "      <td>[47.84, 48.12, 48.19, 48.49, 48.89, 49.22, 49....</td>\n",
+       "      <td>[[host, 47.74, 62.25]]</td>\n",
+       "      <td>5.729730</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(14514, 17)"
+       "                    file                             segment_file  start  \\\n",
+       "0  audio/58xZSVbpgkk.wav  seg_audio/58xZSVbpgkk__12.0__31.0__.wav   12.0   \n",
+       "1  audio/58xZSVbpgkk.wav  seg_audio/58xZSVbpgkk__31.0__47.0__.wav   31.0   \n",
+       "2  audio/58xZSVbpgkk.wav  seg_audio/58xZSVbpgkk__47.0__62.5__.wav   47.0   \n",
+       "\n",
+       "    end                                  asr_transcription  \\\n",
+       "0  31.0  nekoliko puta smo ponavljali da nišo od uvođen...   \n",
+       "1  47.0  nikad više pa niti iskoristio niti će izgledat...   \n",
+       "2  62.5  dobrani i znate da e svaka stranka od polih pr...   \n",
+       "\n",
+       "                                    kaldi_transcript  \\\n",
+       "0  nekoliko tema je bilo u skupštini znači niške ...   \n",
+       "1  nikad više<anchor_end> niti je iskoristio niti...   \n",
+       "2  vi znate da svaka stranka otprilike predloži d...   \n",
+       "\n",
+       "                    raw_transcript__matched_on_kaldi  \\\n",
+       "0  nekoliko tema je bilo u Skupštini! Znači, nišk...   \n",
+       "1  nikad više?’ Niti je iskoristio, niti će izgle...   \n",
+       "2  znate da svaka stranka otprilike predloži 250 ...   \n",
+       "\n",
+       "                      raw_transcript__matched_on_asr           guest_name  \\\n",
+       "0  Nekoliko puta smo ponavljali da Niš od uvođenj...  Slavoljub Vlajković   \n",
+       "1  nikad više?’ Niti je iskoristio, niti će izgle...  Slavoljub Vlajković   \n",
+       "2  izabrani. Vi znate da svaka stranka otprilike ...  Slavoljub Vlajković   \n",
+       "\n",
+       "              guest_description                host  \\\n",
+       "0  narodni poslanik SPS iz Niša  Predrag Blagojević   \n",
+       "1  narodni poslanik SPS iz Niša  Predrag Blagojević   \n",
+       "2  narodni poslanik SPS iz Niša  Predrag Blagojević   \n",
+       "\n",
+       "                                         kaldi_words  \\\n",
+       "0  [nekoliko, tema, je, bilo, u, skupštini, znači...   \n",
+       "1  [nikad, više<anchor_end>, niti, je, iskoristio...   \n",
+       "2  [vi, znate, da, svaka, stranka, otprilike, pre...   \n",
+       "\n",
+       "                                   kaldi_word_starts  \\\n",
+       "0  [12.47, 13.3, 13.45, 13.51, 13.65, 14.66, 15.0...   \n",
+       "1  [31.17, 31.46, 32.62, 32.83, 32.89, 33.54, 33....   \n",
+       "2  [47.74, 47.84, 48.12, 48.19, 48.49, 48.89, 49....   \n",
+       "\n",
+       "                                     kaldi_word_ends  \\\n",
+       "0  [12.89, 13.45, 13.51, 13.65, 13.68, 15.0, 15.5...   \n",
+       "1  [31.46, 31.74, 32.83, 32.89, 33.54, 33.75, 33....   \n",
+       "2  [47.84, 48.12, 48.19, 48.49, 48.89, 49.22, 49....   \n",
+       "\n",
+       "                                   speaker_breakdown  average_distance  \\\n",
+       "0  [[guest, 12.47, 16.79], [host, 16.79, 19.03], ...          5.142857   \n",
+       "1  [[host, 31.17, 31.74], [guest, 31.74, 36.67], ...          3.604167   \n",
+       "2                             [[host, 47.74, 62.25]]          5.729730   \n",
+       "\n",
+       "   similarity_ratio  \n",
+       "0                44  \n",
+       "1                89  \n",
+       "2                89  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,7 +178,8 @@
     "\n",
     "\n",
     "mer = pd.read_json(\"025_segments_matched_with_raw.jsonl\", orient=\"records\", lines=True)\n",
-    "mer.shape"
+    "mer.shape\n",
+    "mer.head(3)"
    ]
   },
   {
@@ -791,7 +948,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -805,12 +962,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2d30c88cb7145d662123f76f8c64609bc18e52940d2861adec2407b68f2e334f"
+    "hash": "7f6f5766036ee03d059e365a942add07f79c17033585e9357ee8157d52fe6bb9"
    }
   }
  },
