--- a/31_preparing_dataset_in_Parlaspeech_format.ipynb
+++ b/31_preparing_dataset_in_Parlaspeech_format.ipynb
@@ -1200,7 +1200,7 @@
     "* `start`: start time in seconds since the beginning of the full length audio\n",
     "* `end`: end time in in seconds since the beginning of the full length audio\n",
     "* `words`: raw transcript, word delimited, contains numerals, punctuation, `JV:` separators...\n",
-    "* `norm_words`: kaldi alignment, word delimited, with normalized, lowercased Kaldi output\n",
+    "* `norm_words`: kaldi alignment, word delimited, with normalized, lowercased Kaldi output. Host questions are delimited with `<anchor_start>` and `<anchor_end>`.\n",
     "* `norm_words_start_times`: timestamps of `norm_words` starts\n",
     "* `utterance_id_start`: moot, kept for consistency with ParlaSpeech-HR.v1.0\n",
     "* `utterance_id_end`: see above\n",
@@ -1210,22 +1210,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['guest_name', 'guest_description', 'host', 'speaker_breakdown'])"
+       "0        [domaćih, granica, da, postane, regionalni, fe...\n",
+       "1        [ne, znam, da, li, je, neko, progovorio, na, t...\n",
+       "2        [radimo, i, što, možemo, za, sada, imamo, dost...\n",
+       "3        [umetničkog, dela, pozorišta, da, vidimo, da, ...\n",
+       "4        [prema, tome, ćemo, se, odrediti, i, drugi, re...\n",
+       "                               ...                        \n",
+       "10806    [u, snsu<anchor_end>, ja, nisam, rekao, da, je...\n",
+       "10807    [ona, je, došla, nazad, primio, je, neki, ofic...\n",
+       "10808    [izuzetno, doprinose, bruto, domaćem, proizvod...\n",
+       "10809    [gospodina, tončeva, u, mom, razgovoru, sa, nj...\n",
+       "10810    [je, zemlja, svake, godine, sve, zaduženija, i...\n",
+       "Name: norm_words, Length: 10811, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jv.speaker_info[0].keys()"
+    "jv.norm_words"
    ]
   },
   {
